gl51-master/src/test/deca/context/invalid/testObject_rule3_40.deca
//Description
//error de type dans instanceof

class A {}
{
    A a = new A();
    if (a instanceof true){}//error car true n'est pas une class
   // if (a instanceof int){} ca ca marche
}
//releve erreur
